# unpackr

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  rust.yml
src/: archive.rs  cli.rs  main.rs  utils.rs
src/formats/: ar.rs  cab.rs  compression.rs  mod.rs  tar.rs  zip.rs
