[package]
name = "unpackr"
version = "0.1.0"
authors = ["Warren Galyen <wgalyen@hotmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
zip = "0.5.9"
failure = "0.1.8"
indicatif = "0.15.0"
tree_magic = { version = "0.2.1", features = ["staticmime"] }
uuid = { version = "0.7.1", features = ["v4"] }
regex = "1.4.3"
lazy_static = "1.4.0"