[package]
name = "unpackr"
version = "0.2.0"
authors = ["Warren Galyen <wgalyen@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Command line utility that unpacks archives."
readme = "README.md"
repository = "https://github.com/warrengalyen/unpackr"
homepage = "https://github.com/warrengalyen/unpackr"
documentation = "https://github.com/warrengalyen/unpackr"

[dependencies]
ar = "0.6.2"
clap = "2.33.3"
console = "0.14.0"
zip = "0.5.9"
failure = "0.1.8"
indicatif = "0.11.0"
tree_magic = { version = "0.2.1", features = ["staticmime"] }
uuid = { version = "0.7.1", features = ["v4"] }
regex = "1.4.3"
lazy_static = "1.4.0"
tar = "0.4.20"
libflate = "1.0.3"
xz2 = "0.1.6"
bzip2 = "0.4.1"
petgraph = "0.5.1"
strum = "0.20.0"
strum_macros = "0.20.0"
cab = "0.2.0"
memmap = "0.7.0"
owning_ref = "0.4.0"
stable_deref_trait = "1.1.1"
goblin = { version = "0.0.19", features = ["pe32", "pe64", "std"], default_features = false }